--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "http://quangvinht.github.io/neftflix-ui",
     "name": "tiktok-ui",
     "version": "0.1.0",
     "private": true,
@@ -31,6 +32,8 @@
     },
     "scripts": {
         "start": "react-app-rewired start",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-scripts eject"
@@ -56,7 +59,9 @@
     "devDependencies": {
         "babel-plugin-module-resolver": "^4.1.0",
         "customize-cra": "^1.0.0",
+        "gh-pages": "^4.0.0",
         "react-app-rewired": "^2.2.1",
+        "s": "^1.0.0",
         "sass": "^1.51.0"
     }
 }
