--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bootstrap": "^5.2.0",
         "boxicons": "^2.1.2",
         "classnames": "^2.3.1",
+        "deploy": "^1.0.3",
         "normalize.css": "^8.0.1",
         "query-string": "^7.1.1",
         "react": "^18.1.0",
